/*
 * Shutdown - Manages System Shutdown
 * 
 * Author: Dr. Axel Richter, DM1AR
 * Date: 2024-08-22
 * License: MIT
 *
 * Description:
 * This header file defines the Shutdown class, which handles the system
 * shutdown process, ensuring all resources are properly released.
 */

#ifndef SHUTDOWN_H
#define SHUTDOWN_H

class Shutdown {
public:
    void performShutdown();
};

#endif // SHUTDOWN_H
